Completed Add Room Schedule Restrictions, Added Room Queries, Added Logic to New Teacher JComboBox Field - Added logic to fill the new Teacher JComboBox Field with the available set of teachers within the accounts table. - Revised query logic of displaying all teacher schedules from the rooms table via sorting it by the day of the week. - Added a query to find all the time schedules of a specified room from a specified day of the week. - Added a query to find all the time schedules of a specified teacher from a specified day of the week. - Added all the remaining necessary restrictions when adding a new room schedule in the room assignment and management panel form. - Added all the remaining restrictive logic in the room validator class when adding a new room schedule.

--- a/src/RoomAssignment/Dashboard.form
+++ b/src/RoomAssignment/Dashboard.form
@@ -952,7 +952,7 @@
                                   <EmptySpace min="-2" max="-2" attributes="0"/>
                                   <Component id="btnRAMSave" min="-2" pref="70" max="-2" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="btnRAMDeleteRoom" pref="89" max="32767" attributes="0"/>
+                                  <Component id="btnRAMDeleteRoom" pref="92" max="32767" attributes="0"/>
                               </Group>
                               <Component id="spRAMShowRoom" alignment="0" max="32767" attributes="0"/>
                           </Group>
@@ -1031,7 +1031,7 @@
                               <Component id="btnRAMAdd" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                               <Component id="btnRAMEdit" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="88" max="32767" attributes="0"/>
+                          <EmptySpace pref="45" max="32767" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="btnRAMSearch" alignment="3" pref="27" max="32767" attributes="0"/>
@@ -1248,6 +1248,9 @@
                     </Property>
                     <Property name="enabled" type="boolean" value="false"/>
                   </Properties>
+                  <Events>
+                    <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtRAMEndTimeActionPerformed"/>
+                  </Events>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnRAMStartTime">
                   <Properties>
