Added icon logo, change logo on dashboard, and update teacher checkbox. Remove other jdbc versions.

--- a/src/RoomAssignment/Signin_Signout.form
+++ b/src/RoomAssignment/Signin_Signout.form
@@ -107,7 +107,7 @@
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="33" green="33" red="33" type="rgb"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Welcome, "/>
+            <Property name="text" type="java.lang.String" value="Welcome to RAMS!"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblWelcomeLoginText">
