--- a/src/RoomAssignment/Dashboard.form
+++ b/src/RoomAssignment/Dashboard.form
@@ -157,30 +157,23 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Component id="pnlTabHome" pref="210" max="32767" attributes="0"/>
-              <Component id="pnlTabRoomManagement" pref="210" max="32767" attributes="0"/>
-              <Component id="pnlTabMembers" alignment="0" pref="210" max="32767" attributes="0"/>
+              <Component id="pnlTabHome" pref="186" max="32767" attributes="0"/>
+              <Component id="pnlTabRoomManagement" pref="186" max="32767" attributes="0"/>
+              <Component id="pnlTabMembers" alignment="0" pref="186" max="32767" attributes="0"/>
               <Component id="pnlTabAccount" alignment="0" max="32767" attributes="0"/>
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="32767" attributes="0"/>
-                  <Component id="lblImageOnTop" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="61" max="-2" attributes="0"/>
-              </Group>
-              <Group type="102" alignment="0" attributes="0">
-                  <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                  <Component id="lblRoomMangementSystem" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="10" max="32767" attributes="0"/>
+                  <Component id="lblTabRAMS" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="41" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
-                  <EmptySpace min="-2" pref="25" max="-2" attributes="0"/>
-                  <Component id="lblImageOnTop" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="lblRoomMangementSystem" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="134" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="46" max="-2" attributes="0"/>
+                  <Component id="lblTabRAMS" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="65" max="-2" attributes="0"/>
                   <Component id="pnlTabHome" min="-2" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="pnlTabRoomManagement" min="-2" max="-2" attributes="0"/>
@@ -270,7 +263,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" max="-2" attributes="0"/>
-                      <Component id="lblTabRoomManagement" max="32767" attributes="0"/>
+                      <Component id="lblTabRoomManagement" pref="170" max="32767" attributes="0"/>
                       <EmptySpace min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -403,19 +396,11 @@
             </Component>
           </SubComponents>
         </Container>
-        <Component class="javax.swing.JLabel" name="lblImageOnTop">
+        <Component class="javax.swing.JLabel" name="lblTabRAMS">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/RoomAssignment/image/undraw_Launching.png"/>
+              <Image iconType="3" name="/RoomAssignment/image/RAMS.png"/>
             </Property>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JLabel" name="lblRoomMangementSystem">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Copperplate Gothic Bold" size="12" style="2"/>
-            </Property>
-            <Property name="text" type="java.lang.String" value="Room Management System"/>
           </Properties>
         </Component>
       </SubComponents>
@@ -441,27 +426,27 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="pnlHome" max="32767" attributes="0"/>
+                  <Component id="pnlHome" pref="1062" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlRoomManagement" max="32767" attributes="0"/>
+                      <Component id="pnlRoomManagement" pref="1062" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="2" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlMembers" max="32767" attributes="0"/>
+                      <Component id="pnlMembers" pref="1062" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="3" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlAccount" max="32767" attributes="0"/>
+                      <Component id="pnlAccount" pref="1062" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -531,7 +516,7 @@
                               <Component id="pnlHomeCreatedSchedule" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
                               <Component id="pnlHomeCreatedAccount" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="0" pref="187" max="32767" attributes="0"/>
+                              <EmptySpace min="0" pref="191" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -958,8 +943,9 @@
                                       </Group>
                                       <Component id="cbRAMUpdateDayOfTheWeek" min="-2" max="-2" attributes="0"/>
                                       <Component id="cbRAMUpdateTeacher" min="-2" max="-2" attributes="0"/>
+                                      <Component id="cbRAMUpdateTime" alignment="0" min="-2" max="-2" attributes="0"/>
                                   </Group>
-                                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                                  <EmptySpace min="0" pref="125" max="32767" attributes="0"/>
                               </Group>
                           </Group>
                           <EmptySpace max="-2" attributes="0"/>
@@ -1037,7 +1023,9 @@
                               <Component id="btnRAMAdd" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                               <Component id="btnRAMEdit" alignment="3" min="-2" pref="28" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace max="32767" attributes="0"/>
+                          <EmptySpace pref="24" max="32767" attributes="0"/>
+                          <Component id="cbRAMUpdateTime" min="-2" max="-2" attributes="0"/>
+                          <EmptySpace max="-2" attributes="0"/>
                           <Component id="cbRAMUpdateTeacher" min="-2" max="-2" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                           <Component id="cbRAMUpdateDayOfTheWeek" min="-2" max="-2" attributes="0"/>
@@ -1476,6 +1464,14 @@
                   <Events>
                     <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbRAMUpdateDayOfTheWeekActionPerformed"/>
                   </Events>
+                </Component>
+                <Component class="javax.swing.JCheckBox" name="cbRAMUpdateTime">
+                  <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Century Gothic" size="12" style="0"/>
+                    </Property>
+                    <Property name="text" type="java.lang.String" value="Update Time?"/>
+                  </Properties>
                 </Component>
               </SubComponents>
             </Container>
