Reverted Changes from GitHub Repo Pull and Manually Added Changes - Reverted the changes from the GitHub repository in the dashboard and change password classes to prevent confusion and breaking of the application's back-end logic. - Revised the message in the information icon in the view schedule class to be more appropriate. - Added an extra layer of restrictive logic when changing passwords through the change password class. - Changed the current password JTextField to a JPasswordField in the change password class, as well as adjusting the show password logic to accommodate it as well. - Changed the logic on how passwords are taken, compared, and saved in the change password class to be more appropriate. - Added a clear and reset all fields logic when users successfully add, update, and delete data and information in the room assignment and management and members panel forms in the application. - Added an auto-fill all fields feature and logic for the panel forms of members and room assignment and management via clicking a row available on their respective JTables. - Renamed the JPasswordFields variable names in the members panel form in the dashboard class, as well as all the JPasswordFields' variable names in the change password class to be aligned with the other JPasswordFields variable names in the application. - Extended the clear error message methods' timer from 3 seconds to 5 seconds long before clearing the error messages in the room assignment and management panel form and in the members panel form when an error in input within the fields occurs on those respective panel forms. - Fixed a bug that causes an exception to occur regarding to setting the lock and unlock imageicons of the edit buttons in the room assignment and management panel form and in the members panel form, especially when changing the icons from lock to unlock and vice versa when the program is ran using the jar executable file.

--- a/src/RoomAssignment/Change_Password.form
+++ b/src/RoomAssignment/Change_Password.form
@@ -90,9 +90,9 @@
                                   <Component id="cbShowPassword" min="-2" max="-2" attributes="0"/>
                                   <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                               </Group>
-                              <Component id="txtCurrentPassword" max="32767" attributes="0"/>
-                              <Component id="txtNewPassword" max="32767" attributes="0"/>
-                              <Component id="txtConfirmPassword" max="32767" attributes="0"/>
+                              <Component id="pwNewPassword" max="32767" attributes="0"/>
+                              <Component id="pwConfirmPassword" max="32767" attributes="0"/>
+                              <Component id="pwCurrentPassword" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -106,17 +106,17 @@
                   <EmptySpace max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblCurrentPassword" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtCurrentPassword" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="pwCurrentPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblNewPassword" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtNewPassword" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="pwNewPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace type="unrelated" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="3" attributes="0">
                       <Component id="lblConfirmPassword" alignment="3" min="-2" max="-2" attributes="0"/>
-                      <Component id="txtConfirmPassword" alignment="3" min="-2" max="-2" attributes="0"/>
+                      <Component id="pwConfirmPassword" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="2" max="-2" attributes="0"/>
                   <Component id="cbShowPassword" min="-2" max="-2" attributes="0"/>
@@ -140,13 +140,6 @@
               <Color blue="ff" green="ff" red="ff" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Current Password"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JTextField" name="txtCurrentPassword">
-          <Properties>
-            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
-              <Font name="Century Gothic" size="12" style="0"/>
-            </Property>
           </Properties>
         </Component>
         <Component class="javax.swing.JLabel" name="lblNewPassword">
@@ -211,9 +204,12 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCancelActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="txtNewPassword">
+        <Component class="javax.swing.JPasswordField" name="pwNewPassword">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pwNewPasswordActionPerformed"/>
+          </Events>
         </Component>
-        <Component class="javax.swing.JPasswordField" name="txtConfirmPassword">
+        <Component class="javax.swing.JPasswordField" name="pwConfirmPassword">
         </Component>
         <Component class="javax.swing.JCheckBox" name="cbShowPassword">
           <Properties>
@@ -224,6 +220,11 @@
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbShowPasswordActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JPasswordField" name="pwCurrentPassword">
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="pwCurrentPasswordActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
