--- a/src/RoomAssignment/Dashboard.form
+++ b/src/RoomAssignment/Dashboard.form
@@ -403,27 +403,27 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="pnlHome" max="32767" attributes="0"/>
+                  <Component id="pnlHome" pref="1086" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlRoomManagement" max="32767" attributes="0"/>
+                      <Component id="pnlRoomManagement" pref="1086" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="2" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlMembers" max="32767" attributes="0"/>
+                      <Component id="pnlMembers" pref="1086" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="3" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlAccount" max="32767" attributes="0"/>
+                      <Component id="pnlAccount" pref="1086" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -433,27 +433,27 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="1" attributes="0">
                   <EmptySpace max="-2" attributes="0"/>
-                  <Component id="pnlHome" max="32767" attributes="0"/>
+                  <Component id="pnlHome" pref="679" max="32767" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
               </Group>
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlRoomManagement" max="32767" attributes="0"/>
+                      <Component id="pnlRoomManagement" pref="679" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="2" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlMembers" max="32767" attributes="0"/>
+                      <Component id="pnlMembers" pref="679" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
               <Group type="103" rootIndex="3" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="pnlAccount" max="32767" attributes="0"/>
+                      <Component id="pnlAccount" pref="679" max="32767" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -734,7 +734,7 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Group type="102" alignment="0" attributes="0">
                           <EmptySpace max="-2" attributes="0"/>
-                          <Component id="spActivityLog" pref="306" max="32767" attributes="0"/>
+                          <Component id="spActivityLog" pref="363" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -1021,13 +1021,13 @@
                           </Group>
                           <EmptySpace type="separate" max="-2" attributes="0"/>
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                              <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                              <Component id="btnRAMSearch" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="3" attributes="0">
                                   <Component id="btnRAMViewAll" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                                   <Component id="txtRAMID" alignment="3" min="-2" pref="25" max="-2" attributes="0"/>
                                   <Component id="lblRAMID" alignment="3" min="-2" max="-2" attributes="0"/>
                                   <Component id="btnRAMDeleteRoom" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
                                   <Component id="btnRAMSave" alignment="3" min="-2" pref="26" max="-2" attributes="0"/>
-                                  <Component id="btnRAMSearch" alignment="0" min="-2" pref="27" max="-2" attributes="0"/>
                               </Group>
                               <Component id="txtRAMSearch" alignment="1" min="-2" pref="27" max="-2" attributes="0"/>
                           </Group>
