--- a/src/RoomAssignment/View_Schedule.form
+++ b/src/RoomAssignment/View_Schedule.form
@@ -77,20 +77,13 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Component id="pnlNavigatorBar" alignment="1" max="32767" attributes="0"/>
               <Group type="102" alignment="0" attributes="0">
+                  <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="1" attributes="0">
                       <Component id="pnlYourInformation" alignment="1" min="-2" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="16" pref="16" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="0" attributes="0">
-                                  <Component id="lblNotice" min="-2" max="-2" attributes="0"/>
-                                  <Component id="lblWelcome" min="-2" pref="190" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" attributes="0">
-                              <EmptySpace min="16" pref="16" max="-2" attributes="0"/>
-                              <Component id="pnlYourSchedule" min="-2" max="-2" attributes="0"/>
-                          </Group>
+                          <Component id="lblNotice" min="-2" max="-2" attributes="0"/>
+                          <Component id="lblWelcome" min="-2" pref="190" max="-2" attributes="0"/>
+                          <Component id="pnlYourSchedule" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <EmptySpace min="14" pref="28" max="32767" attributes="0"/>
@@ -309,7 +302,6 @@
                           <Group type="102" alignment="1" attributes="0">
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="lblContactAdmin" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <EmptySpace pref="10" max="32767" attributes="0"/>
@@ -843,6 +835,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSearchActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JButton" name="btnViewToday">
               <Properties>
@@ -859,7 +854,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnViewTodayActionPerformed,btnSearchActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnViewTodayActionPerformed"/>
               </Events>
             </Component>
           </SubComponents>
